# Varnan-ResearchPaper-To-Podcast

./: README.md
varnan/: pyproject.toml  requirements.txt
varnan/outputs/: final_script.txt  research_facts.txt
varnan/src/varnan/: crew.py  fetch_pdf_content.py  main.py  tts.py
varnan/src/varnan/config/: agents.yaml  tasks.yaml
varnan/streamlit app/: app.py
