[project]
name = "p2p"
version = "0.1.0"
description = "p2p using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.13"
dependencies = [
    "crewai[tools]>=0.102.0,<1.0.0"
]

[project.scripts]
p2p = "p2p.main:run"
run_crew = "p2p.main:run"
train = "p2p.main:train"
replay = "p2p.main:replay"
test = "p2p.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
